--- a/Code/app/myapp/pubspec.yaml
+++ b/Code/app/myapp/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  charts_flutter: ^0.8.1
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -28,7 +29,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.15.8
-  datetime_picker_formfield: ^0.1.8
+  #datetime_picker_formfield: ^0.1.8
 
 
 # For information on the generic Dart part of this file, see the
@@ -41,7 +42,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
