--- a/Code/app/myapp/pubspec.yaml
+++ b/Code/app/myapp/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  syncfusion_flutter_charts: ^1.0.0-beta.3
 
 dev_dependencies:
   flutter_test:
