--- a/Code/app/myapp/pubspec.yaml
+++ b/Code/app/myapp/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   syncfusion_flutter_charts: ^1.0.0-beta.3
+  http: 0.12.0+4
 
 dev_dependencies:
   flutter_test:
