Traitement informations d'un seul timelapse
- Correction de bug mineur, ajout timeout au chargement des timelapses
- Ajout traitement json pour afficher informations relatives à un seul timelapse

--- a/Code/app/myapp/pubspec.yaml
+++ b/Code/app/myapp/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   syncfusion_flutter_charts: ^1.0.0-beta.3
   http: 0.12.0+4
+  wifi_iot:
+    git: https://github.com/alternadom/WiFiFlutter.git
 
 dev_dependencies:
   flutter_test:
